@@ -209,7 +209,7 @@ namespace std
 	static_assert(_Period::num > 0, "period must be positive");
 
 	// 20.8.3.1 construction / copy / destroy
-	constexpr duration() { }
+	constexpr duration() = default;
 
 	template<typename _Rep2, typename = typename
 	       enable_if<is_convertible<_Rep2, rep>::value
