@@ -24,18 +24,14 @@
 int main()
 {
   __gnu_test::constexpr_default_constructible test1;
-#if 0
   test1.operator()<std::complex<float>>();
   test1.operator()<std::complex<double>>();
   test1.operator()<std::complex<long double>>();
-#endif
 
   __gnu_test::constexpr_single_value_constructible test2;
-#if 0
   test2.operator()<std::complex<float>, float>();
   test2.operator()<std::complex<double>, double>();
   test2.operator()<std::complex<long double>, long double>();
-#endif
 
   return 0;
 }
