@@ -1,3 +1,15 @@
+2010-10-21  Benjamin Kosnik  <bkoz@redhat.com>
+
+	PR libstdc++/46134
+	* include/std/chrono: Use default constructor.
+	* testsuite/util/testsuite_common_types.h
+	(constexpr_default_constructible): Adjust condition.
+
+	PR libstdc++/46133
+	* include/std/complex: Adjust complex specialization default
+	constructors for constexpr.
+	* testsuite/26_numerics/complex/cons/constexpr.cc: Enable tests.
+
 2010-10-20  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/bits/random.h: Adjust for constexpr as per N3126 draft.
